[workspace]
resolver = "2"
members = [
    "crates/*",
    "submodules/*"
]

[workspace.dependencies]
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkanes-macros = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = { version = "1.0", features = ["backtrace"] }
bitcoin = { version = "0.32.4", features = ["rand"] }
byteorder = "1.5"
hex = "0.4.3"
ruint = "1.11.1"
wasm-bindgen = "0.2.89"
wasm-bindgen-test = "0.3.39"
serde_json = "1.0.114"
protobuf = "3.3.0"

[dev-dependencies]
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = ["test-utils"] }
