[package]
name = "tacoclicker-rs"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "submodules/free-mint"
]

[workspace.dependencies]
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkanes-macros = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = { version = "1.0", features = ["backtrace"] }
bitcoin = { version = "0.32.4", features = ["rand"] }
byteorder = "1.5"
hex = "0.4.3"
hex_lit = "0.1.1"
ruint = "1.11.1"
wasm-bindgen = "0.2.89"
wasm-bindgen-test = "0.3.39"
serde_json = "1.0.114"
protobuf = "3.3.0"
flate2 = "1.0"
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs" }

[dependencies]
alkanes-runtime = { workspace = true }
alkanes-support = { workspace = true }
alkanes-macros = { workspace = true }
metashrew-core = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
byteorder = { workspace = true }
hex = { workspace = true }
hex_lit = { workspace = true }
ruint = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
serde_json = { workspace = true }
protobuf = { workspace = true }
flate2 = { workspace = true }
ordinals = { workspace = true }
protorune = { workspace = true }
alkanes = { workspace = true }

[dev-dependencies]
metashrew-core = { workspace = true, features = ["test-utils"] }
protorune = { workspace = true, features = ["test-utils"] }

[features]
test-utils = []
mainnet = []
testnet = []
dogecoin = []
bellscoin = []
fractal = []
luckycoin = []

[build-dependencies]
anyhow = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
