[package]
name = "free-mint"
version = "0.1.0"
edition = "2021"
description = "A modernized and secure version of the free mint alkane contract"
authors = ["Alkane Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { workspace = true }
alkanes-runtime = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
ordinals = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
hex_lit = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
wasm-bindgen-test = { workspace = true }
alkanes-runtime = { workspace = true, features = ["test-utils"] }
alkanes = { workspace = true, features = [
    "test-utils",
] }
metashrew-core = { workspace = true, features = [
    "test-utils",
] }
protorune = { workspace = true, features = [
    "test-utils",
] }
hex_lit = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }

[features]
default = []
test = []
